--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ Repository = 'https://github.com/candidhealth/candid-python'
 [tool.poetry.dependencies]
 python = "^3.8"
 httpx = ">=0.21.2"
-pydantic = ">= 1.9.2,<= 1.10.14"
+pydantic = ">= 1.9.2"
 typing_extensions = ">= 4.0.0"
 
 [tool.poetry.dev-dependencies]
